1.0.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.geostrophic.analysis.Analysis.rst.txt
polaris.tasks.ocean.geostrophic.analysis.Analysis
=================================================

.. currentmodule:: polaris.tasks.ocean.geostrophic.analysis

.. autoclass:: Analysis

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~Analysis.__init__
      ~Analysis.add_dependency
      ~Analysis.add_horiz_mesh_input_file
      ~Analysis.add_init_input_file
      ~Analysis.add_input_file
      ~Analysis.add_output_file
      ~Analysis.add_output_files_for_ocean_model_input
      ~Analysis.add_vert_coord_input_file
      ~Analysis.check_properties
      ~Analysis.compute_error
      ~Analysis.constrain_resources
      ~Analysis.convergence_parameters
      ~Analysis.exact_solution
      ~Analysis.get_horiz_mesh_filename
      ~Analysis.get_init_filename
      ~Analysis.get_output_field
      ~Analysis.get_vert_coord_filename
      ~Analysis.map_from_native_model_vars
      ~Analysis.map_to_native_model_vars
      ~Analysis.open_model_dataset
      ~Analysis.open_vert_coord_dataset
      ~Analysis.plot_convergence
      ~Analysis.process_inputs_and_outputs
      ~Analysis.run
      ~Analysis.runtime_setup
      ~Analysis.set_resources
      ~Analysis.set_shared_config
      ~Analysis.setup
      ~Analysis.validate_baselines
      ~Analysis.write_horiz_mesh_dataset
      ~Analysis.write_initial_state_dataset
      ~Analysis.write_model_dataset
      ~Analysis.write_vert_coord_dataset
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Analysis.component
      ~Analysis.config
      ~Analysis.input_data
   
   